lavoro perso da dropbox

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,17 @@
-minutes.text=Minutes exercise for today :
+# Goal Page
 goal.target=Set your objective:
+goal.insertMinutes=Enter minutes:
+
+
+# Minutes Page
+minutes.track=Track your progress
+minutes.text=Minutes exercise for today :
 minutes.language=Language
+minutes.toGo=Still to go
+minutes.nextTask=Enough for today, let's set my
+minutes.minutes=minutes
+minutes.add=Add
 
 
 # Error messages
-Range.goal.minutes=The goal must be betweeen 1 and 160
+Range.goal.minutes=The goal must be between 1 and 160
