--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -1,6 +1,17 @@
-minutes.text=Minuti di esercizio per oggi:
-goal.target=Stabilisci il tuo target:
+# Goal Page
+goal.target=Stabilisci il tuo obbietivo:
+goal.insertMinutes=Inserisci i minuti:
+
+
+# Minutes Page
+minutes.track=Misura i tuoi progressi
+minutes.text=Minuti di esercizio per oggi
 minutes.language=Lingua
+minutes.toGo=Mancano ancora
+minutes.nextTask=Abbastanza per oggi, fissa il tuo
+minutes.minutes=minuti
+minutes.add=Aggiungi
+
 
 # Error messages
 Range.goal.minutes=L obbiettivo deve essere fra 1 e 160 minuti
