Aggiunta la configurazione di resources specifica per images pom per jpa e hibernate corretto il controller per menu delle attivita'

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,16 +2,15 @@
 goal.target=Set your objective:
 goal.insertMinutes=Enter minutes:
 
-
 # Minutes Page
 minutes.track=Track your progress
-minutes.text=Minutes exercise for today :
+minutes.text=Minutes of exercise done :
 minutes.language=Language
 minutes.toGo=Still to go
 minutes.nextTask=Enough for today, let's set my
 minutes.minutes=minutes
 minutes.add=Add
-
+minutes.selectActivity=Select the activity
 
 # Error messages
 Range.goal.minutes=The goal must be between 1 and 160
