--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,10 @@ minutes.selectActivity=Select the activity
 
 # Error messages
 Range.goal.minutes=The goal must be between 1 and 160
+
+#Standard errors overridden 
+typeMismatch.commandObjectName.aNumber=You have entered an invalid number for ...
+typeMismatch.aNumber=You have entered an invalid number for ...
+typeMismatch.java.lang.Integer=You have input a non-numeric value into a field expecting a number...
+# (Catches all not found)
+typeMismatch=You have entered incorrect data on this page.  Please fix
